# UBAANext

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  ONBOARDING.md  README.md  target.txt  vcpkg.json
apps/cli/: CMakeLists.txt
apps/cli/include/: AppContext.hpp  CliConfig.hpp  CliRunner.hpp  CommandHandlers.hpp  Console.hpp  ExitCodes.hpp  OutputFormatter.hpp  PlainFileStore.hpp  PlatformContextFactory.hpp  SecurityRedaction.hpp  ServiceFactory.hpp
apps/cli/src/: CliConfig.cpp  CliMain.cpp  CommandHandlers.cpp  OutputFormatter.cpp  PlainFileStore.cpp  PlatformContextFactory.cpp  SecurityRedaction.cpp  ServiceFactory.cpp  main.cpp
apps/desktop/: CMakeLists.txt
apps/desktop/src/: main.cpp
apps/desktop/ui/: main_window.slint
apps/runtime/: CMakeLists.txt
apps/runtime/src/: AppRuntime.cpp  CloudMountManager.cpp
apps/runtime/src/Mount/: CloudFilesMountAdapterStub.cpp  FuseMountAdapter.cpp  WinFspMountAdapter.cpp
bindings/c/: CMakeLists.txt
bindings/c/src/: UbaaNative.cpp
core/: CMakeLists.txt
core/include/UBAANext/: UBAANext.hpp  Version.hpp.in
core/include/UBAANext/Auth/: AuthService.hpp  Session.hpp  SessionContext.hpp  SessionManager.hpp
core/include/UBAANext/Base/: Error.hpp  Result.hpp  TimeUtils.hpp  Types.hpp
core/include/UBAANext/CloudVfs/: CloudVfs.hpp
core/include/UBAANext/Crypto/: CryptoProvider.hpp  ProtocolCrypto.hpp
core/include/UBAANext/Model/: Account.hpp  Bykc.hpp  Classroom.hpp  Cloud.hpp  Course.hpp  Evaluation.hpp  Exam.hpp  FeatureRecord.hpp  Grade.hpp  Judge.hpp  LibrarySeat.hpp  Live.hpp  Signin.hpp  Spoc.hpp  Srs.hpp  Td.hpp  Term.hpp  VenueReservation.hpp  Week.hpp  Wifi.hpp  Ygdk.hpp
core/include/UBAANext/Net/: CookieJar.hpp  CookieStore.hpp  HttpClient.hpp  HttpHeaders.hpp  (+6 more)
core/src/: UBAANext.cpp
core/src/Auth/: AuthService.cpp  Session.cpp  SessionContext.cpp  SessionManager.cpp
core/src/Base/: TimeUtils.cpp
core/src/CloudVfs/: CloudVfs.cpp
core/src/Crypto/: CryptoProvider.cpp  ProtocolCrypto.cpp
core/src/Model/: Td.cpp
core/src/Net/: CookieJar.cpp  VpnCipher.cpp  WinHttpClient.cpp
core/src/Parser/: BykcParser.cpp  CloudParser.cpp  EvaluationParser.cpp  JsonParser.cpp  JudgeParser.cpp  LibrarySeatParser.cpp  LiveParser.cpp  SigninParser.cpp  SpocParser.cpp  VenueReservationParser.cpp  YgdkParser.cpp
core/src/Protocol/: AppBuaaSession.cpp  AuthorizedDownstreamRequestExecutor.cpp  ByxtSession.cpp  CasFormParser.cpp  DownstreamSessionTypes.cpp  RedirectNavigator.cpp  ScoreSession.cpp  SessionGuards.cpp  TdClient.cpp
core/src/Security/: SecurityRedaction.cpp
core/src/Service/: BykcService.cpp  ClassroomService.cpp  CloudService.cpp  CourseService.cpp  EvaluationService.cpp  ExamService.cpp  FeatureService.cpp  GradeService.cpp  JudgeService.cpp  LibrarySeatService.cpp  LiveService.cpp  ResponseUtils.cpp  SigninService.cpp  SpocService.cpp  SrsService.cpp  TdSchedulerService.cpp  TdService.cpp  TermService.cpp  TodoService.cpp  VenueReservationService.cpp  WifiService.cpp  WriteOperationGate.cpp  YgdkService.cpp
core/src/Storage/: MemoryCacheStore.cpp  SecureStoreAdapter.cpp  TdStore.cpp
mocks/: CMakeLists.txt
mocks/include/UBAANextMocks/: MockCacheStore.hpp  MockHttpClient.hpp  MockSecureStore.hpp
mocks/src/: MockCacheStore.cpp  MockHttpClient.cpp  MockSecureStore.cpp
platform/: CMakeLists.txt
platform/common/curl/: CMakeLists.txt
platform/common/openssl/: CMakeLists.txt
platform/common/tcp/: CMakeLists.txt
platform/harmony/: CMakeLists.txt
platform/harmony/src/: HarmonyAppDataPathProvider.cpp  HarmonyPlatformCapabilities.cpp  UnsupportedSecureStore.cpp
platform/linux/: CMakeLists.txt
platform/linux/src/: LinuxAppDataPathProvider.cpp  LinuxFuseMount.cpp  LinuxNetworkEnvironment.cpp  LinuxPlatformCapabilities.cpp  LocalEncryptedFileStore.cpp  SecretServiceSecureStore.cpp  UnsupportedSecureStore.cpp
platform/mock/: CMakeLists.txt
platform/windows/: CMakeLists.txt
platform/windows/src/: DpapiSecureStore.cpp  WinFspMount.cpp  WinHttpClient.cpp  WindowsAppDataPathProvider.cpp  WindowsNetworkEnvironment.cpp  WindowsPlatformCapabilities.cpp
reference/AutoTD/: MANIFEST.in  README.md  pyproject.toml
reference/AutoTD/tests/: test_background.py  test_protocol_runner_scheduler.py  test_storage_cli.py  test_telemetry.py  test_ui.py
tests/: CMakeLists.txt
tests/fixtures/: classrooms.json  courses.json  exams.json  terms.json  weeks.json
tests/fixtures/bykc/: chosen.json  course_detail.json  courses.json  profile.json  stats.json
tests/fixtures/evaluation/: required_reviews.json
tests/fixtures/judge/: assignments.html  courses.html  detail.html
tests/fixtures/signin/: today.json
tests/fixtures/spoc/: assignments_page.json  detail.json  submission.json
tests/fixtures/venue/: codes.json  day_info.json  order_detail.json  orders.json  sites.json
tests/fixtures/ygdk/: classifies.json  count.json  items.json  records.json  term.json
tests/integration/: CAbiSmokeTests.cpp  CliIntegrationTests.cpp  LiveSmokeTests.cpp
tests/unit/: AppRuntimeTests.cpp  AuthServiceTests.cpp  AuthorizedDownstreamRequestExecutorTests.cpp  BykcParserTests.cpp  BykcServiceTests.cpp  CacheStoreTests.cpp  CasFormParserTests.cpp  ClassroomServiceTests.cpp  CloudServiceTests.cpp  CloudVfsTests.cpp  CookieJarTests.cpp  CourseServiceTests.cpp  CryptoInjectionTests.cpp  CryptoProviderTests.cpp  CurlCookieStoreTests.cpp  CurlHttpClientTests.cpp  DownstreamSessionTypesTests.cpp  EvaluationParserTests.cpp  EvaluationServiceTests.cpp  ExamServiceTests.cpp  FeatureServiceTests.cpp  FuseMountAdapterTests.cpp  HarmonyPlatformTests.cpp  JsonParserTests.cpp  JudgeParserTests.cpp  JudgeServiceTests.cpp  LibrarySeatParserTests.cpp  LibrarySeatServiceTests.cpp  LinuxPlatformTests.cpp  LiveServiceTests.cpp  P1ReadonlyContractTests.cpp  PlatformBoundaryTests.cpp  PublicApiTests.cpp  RedirectNavigatorTests.cpp  ResponseUtilsTests.cpp  ResultTests.cpp  SecureStoreAdapterTests.cpp  SecurityRedactionTests.cpp  SessionGuardsTests.cpp  SessionManagerTests.cpp  (+21 more)
(+229 files in other folders)
