if(NOT TARGET UBAANextCore)
    message(FATAL_ERROR "UBAANext platform targets require UBAANextCore")
endif()

add_subdirectory(common/curl)
add_subdirectory(common/openssl)
add_subdirectory(mock)
add_subdirectory(windows)
add_subdirectory(linux)
add_subdirectory(harmony)

add_library(UBAANextPlatformCurrent INTERFACE)
if(WIN32)
    target_link_libraries(UBAANextPlatformCurrent INTERFACE UBAANextPlatformWindows)
elseif(CMAKE_SYSTEM_NAME STREQUAL "OHOS")
    target_link_libraries(UBAANextPlatformCurrent INTERFACE UBAANextPlatformHarmony)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    target_link_libraries(UBAANextPlatformCurrent INTERFACE UBAANextPlatformLinux)
else()
    target_link_libraries(UBAANextPlatformCurrent INTERFACE UBAANextPlatformMock)
endif()
