[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotd-buaa"
version = "0.1.15"
description = "BUAA TD automation command line utility"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "autoTD maintainers" }
]
keywords = ["buaa", "td", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.scripts]
autotd = "auto_td.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auto_td = ["templates/*.json", "ui_static/*"]
